fix(kit): `InputCount` controllers (+/-) overlapping (#555)

--- a/projects/kit/components/input-count/input-count.style.less
+++ b/projects/kit/components/input-count/input-count.style.less
@@ -20,7 +20,8 @@
 .textfield {
     position: relative;
     border-radius: inherit;
-    width: 100%;
+    flex-grow: 1;
+    min-width: 0;
 
     :host._has-buttons & {
         border-top-right-radius: 0;
